# hybridaweb-rust

./: .gitignore  Cargo.toml  makefile
src/: Db.rs  Log.rs  RespTime.rs  ext.rs  htmlize.rs  include.rs  lib.rs  log.rs  macros.rs  main.rs  prelude.rs  reply.rs  resptime.rs  set_cookie.rs  ware.rs
src/server/: mod.rs  views.rs
tests/: simple.rs
