[package]
name = "hybridaweb"
version = "0.1.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]

[dependencies]
clippy = { version = "0.0.79", optional = true }
iron = "0.4.0"
isatty = "0.1.1"
itertools = "0.4.16"
lazy_static = "0.2.1"
postgres = "0.11.9"
scopeguard = "0.2.0"
slog = "0.6.0"
slog-json = "0.6.0"
slog-term = "0.6.0"
time = "0.1.35"

[features]
default = []
dev = ["clippy"]
