[package]
name = "hybridaweb"
version = "0.1.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]

[dependencies]
clippy = { version = "0.0.79", optional = true }
iron = "0.4.0"
isatty = "0.1.1"
itertools = "0.4.16"
lazy_static = "0.2.1"
maud = "0.9.0"
maud_macros = "0.9.2"
mount = "0.2.1"
# mount = { path = "../mount" }
postgres = "0.11.9"
router = "0.2.0"
scopeguard = "0.2.0"
slog = "0.6.0"
slog-json = "0.6.0"
slog-term = "0.6.0"
staticfile = "0.3.0"
#staticfile = { path = "../staticfile" }
time = "0.1.35"

[features]
default = []
dev = ["clippy"]
